tests/NormalTests/paczka1/small_fuzzy/10168219.err
Error in line 3: S969 S969 11,98
Error in line 6: S969 S969 25,4
Error in line 15: AmYlm S2M 124,M
Error in line 13: S969 A825 65,5
